subprojects/comp261/src/main/java/com/hjwylde/uni/comp261/assignment03/data/grammar.txt
PROGRAM               ::= INSTRUCTION*

INSTRUCTION           ::= VARIABLE [+|-|*|/]= VALUE;
                        | do {INSTRUCTION*} while (BOOLEAN);
                        | drop();
                        | if (BOOLEAN") {INSTRUCTION*}[ else {INSTRUCTION*}]
                        | move(VALUE);
                        | pickup();
                        | turn(VALUE);
                        | turnTowardsFirstINSTRUCTION_METHOD;
                        | while (BOOLEAN) {INSTRUCTION*}

INSTRUCTION_METHOD    ::= Box()
                        | Thing()

BOOLEAN               ::= (BOOLEAN_CONDITION)
                        | !BOOLEAN
                        | false
                        | touchingBOOLEAN_METHOD
                        | true

BOOLEAN_CONDITION     ::= BOOLEAN (|||&&) BOOLEAN
                        | VALUE (==|!=|>|<) VALUE

BOOLEAN_METHOD        ::= Box()
                        | Robot()
                        | Thing()
                        | Wall()

VALUE                 ::= VARIABLE
                        | [-][0-9]+
                        | getVALUE_METHOD

VALUE_METHOD          ::= BoxDistance()
                        | NumberOfThingsNotInBoxes()
                        | ThingDistance()

VARIABLE              ::= $[a-z][A-Za-z0-9_]*
